Added new game over screen, fixed some pause weirdness.

--- a/AgonPackage.bundle/settings.json
+++ b/AgonPackage.bundle/settings.json
@@ -12,7 +12,7 @@
         {
             "allow_worse": false, 
             "sort_descending": true, 
-            "name": "Endless", 
+            "name": "Survival", 
             "resource_id": 0, 
             "id": 1, 
             "path": "", 
